# chat-ai

./: docker-compose.yml
backend/: .dockerignore  .env example  Dockerfile  main.py  pyproject.toml  requirements.txt
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: index.css  index.js
frontend/src/components/chat/: chat.jsx  chat.module.css
frontend/src/pages/Home/: Home.jsx
frontend/src/services/: api.js
